--- a/css/navigation.styl
+++ b/css/navigation.styl
@@ -1,7 +1,6 @@
 #navigation
   margin-left 1em
   margin-bottom 15px
-  width 100%
   
   li
     display inline
